--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: UW Prosocial Computing Group
+title: Ruoxi (Anna) Shang
 ---
 
 {% assign areas = site.data.research-area.area %}
