--- a/project/index.html
+++ b/project/index.html
@@ -3,32 +3,30 @@ layout: default
 title: Project
 ---
 
-{% assign areas = site.data.research-area.area %}
+{% assign projects = site.data.research-project.project %}
 
 <div class="container py-4">
     <p style="font-weight: 500 !important; text-transform: uppercase;">Project</p>
-    {% for area in areas %}
+    {% for project in projects %}
     {% capture thecycle %}{% cycle 'odd', 'even' %}{% endcapture %}
     {% if thecycle == 'odd' %}
     <div class="row mt-5">
-        <div class="col-12 col-md-4 mb-3 mb-md-0 align-self-center">
-            <img src="{{ '/assets/images/research_area/' | append: area.image | relative_url }}" alt="" style="height: auto; width: 100%;">
+        <div class="col-12 col-md-3 mb-3 mb-md-0 align-self-center">
+            <img src="{{ '/assets/images/research_project/' | append: project.image | relative_url }}" alt="" style="height: auto; width: 100%;">
         </div>
-        <div class="col-12 col-md-8 mb-3 mb-md-0 align-self-center">
-            <p class="mt-2" style="font-size: 1rem; font-weight: 500 !important;">{{ area.title }}</p>
-            <p class="mt-2" style="font-size: 1rem;">{{ area.description }}</p>
-            <a href="{{ 'publication' | relative_url }}" style="font-size: .95rem; font-weight: 400 !important;">> View publications</a>
+        <div class="col-12 col-md-9 mb-3 mb-md-0 align-self-center">
+            <p class="mt-2" style="font-size: 1rem; font-weight: 500 !important;">{{ project.title }}</p>
+            <p class="mt-2" style="font-size: 1rem;">{{ project.description }}</p>
         </div>
     </div>
     {% else %}
     <div class="row mt-5">
-        <div class="col-12 col-md-4 mb-3 mb-md-0 order-md-2 align-self-center">
-            <img src="{{ '/assets/images/research_area/' | append: area.image | relative_url }}" alt="" style="height: auto; width: 100%;">
+        <div class="col-12 col-md-3 mb-3 mb-md-0 order-md-2 align-self-center">
+            <img src="{{ '/assets/images/research_project/' | append: project.image | relative_url }}" alt="" style="height: auto; width: 100%;">
         </div>
-        <div class="col-12 col-md-8 mb-3 mb-md-0 order-md-1 align-self-center">
-            <p class="mt-2" style="font-size: 1rem; font-weight: 500 !important;">{{ area.title }}</p>
-            <p class="mt-2" style="font-size: 1rem;">{{ area.description }}</p>
-            <a href="{{ 'publication' | relative_url }}" style="font-size: .95rem; font-weight: 400 !important;">> View publications</a>
+        <div class="col-12 col-md-9 mb-3 mb-md-0 order-md-1 align-self-center">
+            <p class="mt-2" style="font-size: 1rem; font-weight: 500 !important;">{{ project.title }}</p>
+            <p class="mt-2" style="font-size: 1rem;">{{ project.description }}</p>
         </div>
     </div>
     {% endif %}
