--- a/project/index.html
+++ b/project/index.html
@@ -16,7 +16,7 @@ title: Project
         </div>
         <div class="col-12 col-md-9 mb-3 mb-md-0 align-self-center">
             <p class="mt-2" style="font-size: 1rem; font-weight: 500 !important;">{{ project.title }}</p>
-            <p class="mt-2" style="font-size: 1rem;">{{ project.description }}</p>
+            <p class="mt-2" style="font-size: 1rem;">{{ project.content }}</p>
         </div>
     </div>
     {% else %}
@@ -26,7 +26,7 @@ title: Project
         </div>
         <div class="col-12 col-md-9 mb-3 mb-md-0 order-md-1 align-self-center">
             <p class="mt-2" style="font-size: 1rem; font-weight: 500 !important;">{{ project.title }}</p>
-            <p class="mt-2" style="font-size: 1rem;">{{ project.description }}</p>
+            <p class="mt-2" style="font-size: 1rem;">{{ project.content }}</p>
         </div>
     </div>
     {% endif %}
