--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@ title: Ruoxi (Anna) Shang
             <img src="{{ '/assets/images/main/avatar.png' | relative_url }}" alt="" class="pt-3" style="height: auto; width: 100% !important;">
 
             <p style="font-weight: 300 !important" class="pt-4">
-                I am an HCI researcher and a 3rd-year PhD student at <a href="https://www.hcde.washington.edu/">Human Centered Design and Engineering (HCDE)</a> at the University of Washington, working with Gary Hsieh and Chirag Shah. My research interests generally fall in social computing, explainable ML, and human-AI interaction.
+                I am an HCI researcher and a 3rd-year PhD student at <a href="https://www.hcde.washington.edu/">Human Centered Design and Engineering (HCDE)</a> at the University of Washington, advised by Gary Hsieh and Chirag Shah. My research interests generally fall in social computing, explainable ML, and human-AI interaction.
                 <br><br>
-                Before joining UW, I had fun with mathematics, data science, and applied machine learning as an undergrad at <a href="https://donghoon.io">UC Berkeley</a>.
+                Before joining UW, I had fun with mathematics, data science, and applied machine learning as an undergrad at <a href="https://www.berkeley.edu/">UC Berkeley</a>.
             </p>
             <p class="mb-0">
                 <a href="#" class="cryptedmail"
