--- a/publication/index.html
+++ b/publication/index.html
@@ -36,7 +36,7 @@ title: Publication
           {% for pub in publications %}
           <div class="item col-12 px-0">
               <p class="mb-2" style="font-size: 1rem; font-weight: 400 !important;">{{ pub.title }}</p>
-              <p class="mb-2" style="font-size: .95rem; font-weight: 200 !important;">{{ pub.authors }}</p>
+              <p class="mb-2" style="font-size: .95rem; font-weight: 200 !important;">{% for author in pub.authors %}{% if author == "Ruoxi Shang" %}<b>{{ author }}</b>{% else %}{{ author }}{% endif %}{% unless forloop.last %}, {% endunless %}{% endfor %}</p>
               <p class="mb-2" style="font-size: .95rem; font-weight: 300 !important;">{{ pub.venue_short }}{%if pub.venue_long %}: {{ pub.venue_long }}{% endif %}</p>
               {% if pub.award %}
               <p class="mb-2" style="font-size: .95rem; font-weight: 300 !important;"><i class="fa-solid fa-medal"></i>&nbsp;&nbsp;{{ pub.award }}</p>
