--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ title: Ruoxi (Anna) Shang
 
 <div class="container py-3">
     <div class="row">
-        <div class="col-12 col-md-3 mb-4 mb-md-0">
+        <div class="col-12 col-md-3 mb-4 mb-md-0 pr-md-0">
             <div class="sticky-top">
             <img src="{{ '/assets/images/main/avatar.png' | relative_url }}" alt="" class="pt-3" style="height: auto; width: 100% !important;">
 
