--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ title: Ruoxi (Anna) Shang
                     <a href="{{ 'project' | relative_url }}" style="font-size: .95rem; font-weight: 500 !important;">> View All</a>
                 </div>
             </div>
-            <div class="container pb-3">
+            <div class="container pb-3 px-0 px-md-3">
                 <p style="font-weight: 500 !important; text-transform: uppercase;">Publications</p>
                 <div class="row mt-4">
                     {% for pub in publications limit: 5 %}
@@ -92,7 +92,7 @@ title: Ruoxi (Anna) Shang
                     <a href="{{ 'publication' | relative_url }}" style="font-size: .95rem; font-weight: 500 !important;">> View All</a>
                 </div>
             </div>
-            <div class="container pb-3">
+            <div class="container pb-3 px-0 px-md-3">
                 <p style="font-weight: 500 !important; text-transform: uppercase;">News</p>
                 <div class="row mt-4">
                     {% for new in news limit: 5 %}
