--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ title: Ruoxi (Anna) Shang
             </div>
         </div>
         <div class="col-12 col-md-9">
-            <div class="container pt-2">
+            <div class="container pt-2 px-0 px-md-3">
                 <p style="font-weight: 500 !important; text-transform: uppercase;">Ongoing projects</p>
                 <div class="row mt-4">
                     {% for project in projects limit: 2 %}
