--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ title: Ruoxi (Anna) Shang
     <div class="row">
         <div class="col-12 col-md-3 mb-4 mb-md-0 pr-md-0">
             <div class="sticky-top">
-            <img src="{{ '/assets/images/main/avatar.png' | relative_url }}" alt="" class="pt-3" style="height: auto; width: 100% !important;">
+            <img src="{{ '/assets/images/main/avatar.png' | relative_url }}" alt="Profile image of Ruoxi Shang wearing a purple benie" class="pt-3" style="height: auto; width: 100% !important;">
 
             <p style="font-weight: 300 !important" class="pt-4">
                 I am an HCI researcher and a 3rd-year PhD student at <a href="https://www.hcde.washington.edu/">Human Centered Design and Engineering (HCDE)</a> at the University of Washington, advised by Gary Hsieh and Chirag Shah. My research generally lie in Human-AI Interaction and Human-centered Explainable ML. I study how to design AI agents that can attend to the cognitive and emotional needs of humans when assisting them. 
@@ -46,7 +46,7 @@ title: Ruoxi (Anna) Shang
                     <div class="col-12 col-md-6 mb-4 mb-md-0">
                         <div class="row">
                             <div class="col-6">
-                                <img src="{{ '/assets/images/research_project/' | append: project.image | relative_url }}" alt="" style="height: auto; width: 100%;">
+                                <img src="{{ '/assets/images/research_project/' | append: project.image | relative_url }}" alt={{ project.alt }} style="height: auto; width: 100%;">
                             </div>      
                             <div class="col-6 px-0">
                                 <p style="font-size: .95rem; font-weight: 500 !important; line-height: 1.2 !important;" class="mb-3">{{ project.title }}</p>
