--- a/project/index.html
+++ b/project/index.html
@@ -17,6 +17,7 @@ title: Project
         <div class="col-12 col-md-9 mb-3 mb-md-0 align-self-center">
             <p class="mt-2" style="font-size: 1rem; font-weight: 500 !important;">{{ project.title }}</p>
             <p class="mt-2" style="font-size: 1rem;">{{ project.content }}</p>
+            <p class="mt-2" style="font-size: 1rem;">{{ project.date }}</p>
         </div>
     </div>
     {% else %}
@@ -27,6 +28,7 @@ title: Project
         <div class="col-12 col-md-9 mb-3 mb-md-0 order-md-1 align-self-center">
             <p class="mt-2" style="font-size: 1rem; font-weight: 500 !important;">{{ project.title }}</p>
             <p class="mt-2" style="font-size: 1rem;">{{ project.content }}</p>
+            <p class="mt-2" style="font-size: 1rem;">{{ project.date }}</p>
         </div>
     </div>
     {% endif %}
