--- a/project/index.html
+++ b/project/index.html
@@ -15,9 +15,12 @@ title: Project
             <img src="{{ '/assets/images/research_project/' | append: project.image | relative_url }}" alt="" style="height: auto; width: 100%;">
         </div>
         <div class="col-12 col-md-9 mb-3 mb-md-0 align-self-center">
+            <p class="mt-2" style="font-size: 0.8rem; font-style: italic;">{{ project.type }}</p>
             <p class="mt-2" style="font-size: 1rem; font-weight: 500 !important;">{{ project.title }}</p>
             <p class="mt-2" style="font-size: 1rem;">{{ project.content }}</p>
             <p class="mt-2" style="font-size: 1rem;">{{ project.date }}</p>
+            <p class="mt-2" style="font-size: 1rem;">{{ project.collaborator }}</p>
+            <p class="mt-2" style="font-size: 1rem;">{{ project.advisor }}</p>
         </div>
     </div>
     {% else %}
@@ -26,9 +29,12 @@ title: Project
             <img src="{{ '/assets/images/research_project/' | append: project.image | relative_url }}" alt="" style="height: auto; width: 100%;">
         </div>
         <div class="col-12 col-md-9 mb-3 mb-md-0 order-md-1 align-self-center">
+            <p class="mt-2" style="font-size: 0.8rem; font-style: italic;">{{ project.type }}</p>
             <p class="mt-2" style="font-size: 1rem; font-weight: 500 !important;">{{ project.title }}</p>
             <p class="mt-2" style="font-size: 1rem;">{{ project.content }}</p>
             <p class="mt-2" style="font-size: 1rem;">{{ project.date }}</p>
+            <p class="mt-2" style="font-size: 1rem;">{{ project.collaborator }}</p>
+            <p class="mt-2" style="font-size: 1rem;">{{ project.advisor }}</p>
         </div>
     </div>
     {% endif %}
