--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ title: Ruoxi (Anna) Shang
                                 <div style=" line-height: 1.2 !important;" class="mb-3">
                                     <a href="{{ '/project' | relative_url }}" style="font-size: .95rem; font-weight: 500 !important;">{{ project.title }}</a>
                                 </div>
-                                <p style="font-size: .85rem; font-weight: 400 !important;">{{ project.content }}</p>
+                                <p style="font-size: .85rem; font-weight: 400 !important;">{{ project.short-content }}</p>
                             </div>      
                         </div>
                     </div>
