Updated Google scholar

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ title: Ruoxi (Anna) Shang
                 <a href="https://twitter.com/annashang_rx"><i class="fa-brands fa-twitter" style="margin-right: .4rem;"></i>@annashang_rx</a>
             </p>
             <p class="mb-0">
-                <a href="https://scholar.google.com/citations?user=AFfJDWgAAAAJ&hl=en"><i class="fa-brands fa-solid" style="margin-right: .4rem;"></i>Google Scholar</a>
+                <a href="https://scholar.google.com/citations?user=AFfJDWgAAAAJ&hl=en"><i class="fa-brands fa-google" style="margin-right: .4rem;"></i>Google Scholar</a>
             </p>
             <p class="mb-0">
                 <a href="https://www.linkedin.com/in/ruoxi-shang-610359133"><i class="fa-brands fa-linkedin" style="margin-right: .6rem;"></i></a>
