--- a/publication/index.html
+++ b/publication/index.html
@@ -39,23 +39,23 @@ title: Publication
               <p class="mb-2" style="font-size: .95rem; font-weight: 200 !important;">{% for author in pub.authors %}{% if author == "Ruoxi Shang" %}<b>{{ author }}</b>{% else %}{{ author }}{% endif %}{% unless forloop.last %}, {% endunless %}{% endfor %}</p>
               <p class="mb-2" style="font-size: .95rem; font-weight: 300 !important;">{{ pub.venue_short }}{%if pub.venue_long %}: {{ pub.venue_long }}{% endif %}</p>
               {% if pub.award %}
-              <p class="mb-2" style="font-size: .95rem; font-weight: 300 !important;"><i class="fa-solid fa-medal"></i>&nbsp;&nbsp;{{ pub.award }}</p>
+              <p class="mb-2" style="font-size: .95rem; font-weight: 300 !important;"><i class="fa fa-medal"></i>&nbsp;&nbsp;{{ pub.award }}</p>
               {% endif %}
               <p style="font-size: .9rem; font-weight: 300 !important;">
                   {% if pub.pdf %}
-                  <a href="{{ '/assets/pdf/publications/' | append: pub.pdf | relative_url }}"><i class="fa-solid fa-file"></i>&nbsp;&nbsp;PDF</a>&nbsp;&nbsp;&nbsp;&nbsp;
+                  <a href="{{ '/assets/pdf/publications/' | append: pub.pdf | relative_url }}"><i class="fa fa-file"></i>&nbsp;&nbsp;PDF</a>&nbsp;&nbsp;&nbsp;&nbsp;
                   {% endif %}
                   {% if pub.arxiv %}
-                  <a href="{{ pub.arxiv }}"><i class="fa-solid fa-file-archive"></i>&nbsp;&nbsp;arXiv</a>&nbsp;&nbsp;&nbsp;&nbsp;
+                  <a href="{{ pub.arxiv }}"><i class="fa fa-archive"></i>&nbsp;&nbsp;arXiv</a>&nbsp;&nbsp;&nbsp;&nbsp;
                   {% endif %}
                   {% if pub.github %}
-                  <a href="{{ pub.github }}"><i class="fa-brands fa-github"></i>&nbsp;&nbsp;GitHub</a>&nbsp;&nbsp;&nbsp;&nbsp;
+                  <a href="{{ pub.github }}"><i class="fa fa-github"></i>&nbsp;&nbsp;GitHub</a>&nbsp;&nbsp;&nbsp;&nbsp;
                   {% endif %}
                   {% if pub.video %}
-                  <a href="{{ pub.video }}"><i class="fa-solid fa-play"></i>&nbsp;&nbsp;Video</a>&nbsp;&nbsp;&nbsp;&nbsp;
+                  <a href="{{ pub.video }}"><i class="fa fa-play"></i>&nbsp;&nbsp;Video</a>&nbsp;&nbsp;&nbsp;&nbsp;
                   {% endif %}
                   {% if pub.slides %}
-                  <a href="{{ pub.slides }}"><i class="fa-solid fa-file-powerpoint"></i>&nbsp;&nbsp;Slides</a>&nbsp;&nbsp;&nbsp;&nbsp;
+                  <a href="{{ pub.slides }}"><i class="fa fa-file-powerpoint"></i>&nbsp;&nbsp;Slides</a>&nbsp;&nbsp;&nbsp;&nbsp;
                   {% endif %}
               </p>
               <hr>
