--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ title: Ruoxi (Anna) Shang
                             </div>      
                             <div class="col-7 px-0">
                                 <div style=" line-height: 1.2 !important;" class="mb-3">
-                                    <a href="{{ '/project' | relative_url }}" style="font-size: .95rem; font-weight: 500 !important;">{{ project.title }}</a>
+                                    <a href="{{ project.title | slugify | prepend: '/projects/' | relative_url }}" style="font-size: .95rem; font-weight: 500 !important;">{{ project.title }}</a>
                                 </div>
                                 <p style="font-size: .85rem; font-weight: 400 !important;">{{ project.short-content }}</p>
                             </div>      
