--- a/publication/index.html
+++ b/publication/index.html
@@ -49,7 +49,7 @@ title: Publication
                   <a href="{{ pub.arxiv }}"><i class="fa fa-archive"></i>&nbsp;&nbsp;arXiv</a>&nbsp;&nbsp;&nbsp;&nbsp;
                   {% endif %}
                   {% if pub.github %}
-                  <a href="{{ pub.github }}"><i class="fa fa-github"></i>&nbsp;&nbsp;GitHub</a>&nbsp;&nbsp;&nbsp;&nbsp;
+                  <a href="{{ pub.github }}"><i class="fa-brands fa-github"></i>&nbsp;&nbsp;GitHub</a>&nbsp;&nbsp;&nbsp;&nbsp;
                   {% endif %}
                   {% if pub.video %}
                   <a href="{{ pub.video }}"><i class="fa fa-play"></i>&nbsp;&nbsp;Video</a>&nbsp;&nbsp;&nbsp;&nbsp;
