--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@ title: Ruoxi (Anna) Shang
 
 <div class="container py-3">
     <div class="row">
-        <div class="col-12 col-md-3 mb-4 mb-md-0 pr-md-0">
+        <div class="col-12 col-md-4 mb-4 mb-md-0 pr-md-0">
             <div class="sticky-top">
-            <img src="{{ '/assets/images/main/avatar.png' | relative_url }}" alt="Profile image of Ruoxi Shang wearing a purple benie" class="pt-3" style="height: auto; width: 80% !important;">
+            <img src="{{ '/assets/images/main/avatar.png' | relative_url }}" alt="Profile image of Ruoxi Shang wearing a purple benie" class="pt-3" style="height: auto; width: 60% !important; display: block; margin-left: auto; margin-right: auto;">
 
             <p style="font-weight: 300 !important" class="pt-4">
-                I am an HCI researcher and a 4th-year PhD student at <a href="https://www.hcde.washington.edu/">Human Centered Design and Engineering (HCDE)</a> at the University of Washington, advised by Gary Hsieh and Chirag Shah. My research generally lie in Human-AI Interaction and Human-centered Interpretable ML. I study how generative AI can facilitate synthetic diversity in feedback to support tech professionals (e.g. programmers, researchers, data scientists). I am also interested in designing AI that can attend to the cognitive and emotional needs of humans when assisting them. 
+                I am a 4th-year PhD student in <a href="https://www.hcde.washington.edu/">Human Centered Design and Engineering (HCDE)</a> at UW, advised by Gary Hsieh and Chirag Shah. I research Human-AI Interaction and Interpretable ML, focusing on how AI can provide diverse feedback and support human needs.
                 <br><br>
-                Before joining UW, I had fun with mathematics, data science, and applied machine learning as an undergrad at <a href="https://www.berkeley.edu/">UC Berkeley</a>.
+                Previously, I studied mathematics, data science, and ML at <a href="https://www.berkeley.edu/">UC Berkeley</a>.
             </p>
             <p class="mb-0">
                 <a href="#" class="cryptedmail"
@@ -46,7 +46,7 @@ title: Ruoxi (Anna) Shang
             </p>
             </div>
         </div>
-        <div class="col-12 col-md-9">
+        <div class="col-12 col-md-8">
             <div class="container pt-2 px-0 px-md-3">
                 <p style="font-weight: 500 !important; text-transform: uppercase;">Ongoing projects</p>
                 <div class="row mt-4">
@@ -58,7 +58,7 @@ title: Ruoxi (Anna) Shang
                             </div>      
                             <div class="col-7 px-0">
                                 <div style=" line-height: 1.2 !important;" class="mb-3">
-                                    <a href="{{ project.title | slugify | prepend: '/projects/' | relative_url }}" style="font-size: .95rem; font-weight: 500 !important;">{{ project.title }}</a>
+                                    <a href="{{ '/projects/' | append: project.slug | relative_url }}" style="font-size: .95rem; font-weight: 500 !important;">{{ project.title }}</a>
                                 </div>
                                 <p style="font-size: .85rem; font-weight: 400 !important;">{{ project.short-content }}</p>
                             </div>      
@@ -84,6 +84,12 @@ title: Ruoxi (Anna) Shang
                         <p style="font-size: .9rem; font-weight: 300 !important;">
                             {% if pub.pdf %}
                             <a href="{{ '/assets/pdf/publications/' | append: pub.pdf | relative_url }}"><i class="fa-solid fa-file"></i>&nbsp;&nbsp;PDF</a>&nbsp;&nbsp;&nbsp;&nbsp;
+                            {% endif %}
+                            {% if pub.arxiv %}
+                            <a href="{{ pub.arxiv }}"><i class="fa-solid fa-archive"></i>&nbsp;&nbsp;arXiv</a>&nbsp;&nbsp;&nbsp;&nbsp;
+                            {% endif %}
+                            {% if pub.github %}
+                            <a href="{{ pub.github }}"><i class="fa-brands fa-github"></i>&nbsp;&nbsp;GitHub</a>&nbsp;&nbsp;&nbsp;&nbsp;
                             {% endif %}
                             {% if pub.video %}
                             <a href="{{ pub.video }}"><i class="fa-solid fa-play"></i>&nbsp;&nbsp;Video</a>&nbsp;&nbsp;&nbsp;&nbsp;
