--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ title: Ruoxi (Anna) Shang
             <img src="{{ '/assets/images/main/avatar.png' | relative_url }}" alt="Profile image of Ruoxi Shang wearing a purple benie" class="pt-3" style="height: auto; width: 60% !important; display: block; margin-left: auto; margin-right: auto;">
 
             <p style="font-weight: 300 !important" class="pt-4">
-                I am a 4th-year PhD student in <a href="https://www.hcde.washington.edu/">Human Centered Design and Engineering (HCDE)</a> at UW, advised by Gary Hsieh and Chirag Shah. I research Human-AI Interaction and Interpretable ML, focusing on how AI can provide diverse feedback and support human needs.
+                I am an HCI researcher and a 4th-year PhD student at <a href="https://www.hcde.washington.edu/">Human Centered Design and Engineering (HCDE)</a> at the University of Washington, advised by Gary Hsieh and Chirag Shah. My research generally lie in Human-AI Interaction and Human-centered Interpretable ML. I study how generative AI can facilitate synthetic diversity in feedback to support tech professionals (e.g. programmers, researchers, data scientists). I am also interested in designing AI that can attend to the cognitive and emotional needs of humans when assisting them.                 
                 <br><br>
                 Previously, I studied mathematics, data science, and ML at <a href="https://www.berkeley.edu/">UC Berkeley</a>.
             </p>
