--- a/project/index.html
+++ b/project/index.html
@@ -6,7 +6,7 @@ title: Project
 {% assign projects = site.data.research-project.project %}
 
 <div class="container py-4">
-    <p style="font-weight: 500 !important; text-transform: uppercase;">Project</p>
+    <p style="font-weight: 500 !important; text-transform: uppercase;">Projects</p>
     <div class="row">
         {% for project in projects %}
         <div class="col-12 col-md-4 mb-4">
