--- a/cv/index.html
+++ b/cv/index.html
@@ -7,10 +7,10 @@ title: CV
 {% assign news = site.data.news.list %}
 
 <div class="container py-4">
-    <p style="font-weight: 500 !important; text-transform: uppercase;">Curriculum Vitae</p>
+    <p style="font-weight: 500 !important; text-transform: uppercase;">Resume &nbsp; [Last Updated in Jan 2025]</p>
     <div class="row mt-4">
         <div class="col-12">
-            <iframe src="{{'/assets/pdf/cv.pdf' | relative_url }}" style="width: 100%; height: 1000px !important;"></iframe>
+            <iframe src="{{'/assets/pdf/Vikas_Reddy_Resume.pdf' | relative_url }}" style="width: 100%; height: 1000px !important;"></iframe>
         </div>
     </div>
 </div>
