--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ title: Vikas Reddy
             <p style="font-weight: 300 !important" class="pt-4">
                 I am a first-year Master's student in the Department of Computer Science at <a href="https://www.jhu.edu/">Johns Hopkins University</a>. I am currently based in Baltimore, Maryland but also frequently visit my home in Tokyo, Japan. I speak four languages, including French and Japanese, and love traveling whenever I get the chance.  
                 <br><br>
-                My research interests focus on Machine Learning, Data Science, and Computational Social Sciences. I completed my undergraduate degree at the <a href="https://www.cs.umd.edu/">University of Maryland, College Park</a>, where I worked with Prof. Giovanni Luca Ciampaglia to study news reliability on Bluesky Social Media.  
+                My research interests focus on Machine Learning, Data Science, and Computational Social Science. I completed my undergraduate degree at the <a href="https://www.cs.umd.edu/">University of Maryland, College Park</a>, where I worked with Prof. Giovanni Luca Ciampaglia to study news reliability on Bluesky Social Media.  
             </p>
             
             <p class="mb-0">
