--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@ title: Vikas Reddy
             <img src="{{ '/assets/images/main/avatar-modified.png' | relative_url }}" alt="Profile image of Vikas Reddy" class="pt-3" style="height: auto; width: 60% !important; display: block; margin-left: auto; margin-right: auto;">
 
             <p style="font-weight: 300 !important" class="pt-4">
-                I am a first-year Master's student in the Department of Computer Science at <a href="https://www.jhu.edu/">Johns Hopkins University</a>. I am currently based in Baltimore, Maryland but also frequently visit my home in Tokyo, Japan. I speak four languages, including French and Japanese, and love traveling whenever I get the chance.  
+                I am a second-year Master's student in the Department of Computer Science at <a href="https://www.jhu.edu/">Johns Hopkins University</a> and a researcher at the <a href="https://gillianhadfield.org/research/">Normativity Lab</a>, where I work with <a href="https://gillianhadfield.org/">Dr. Gillian Hadfield</a> and <a href="https://www.harshsatija.com/">Dr. Harsh Satija</a>. I am currently based in Baltimore, Maryland but also frequently visit my home in Tokyo, Japan. I speak four languages, including French and Japanese, and love traveling whenever I get the chance.  
                 <br><br>
-                My research interests focus on Machine Learning, Data Science, and Computational Social Science. I completed my undergraduate degree at the <a href="https://www.cs.umd.edu/">University of Maryland, College Park</a>, where I worked with Prof. Giovanni Luca Ciampaglia to study news reliability on Bluesky Social Media.  
+                My research interests focus on Software Development, Machine Learning, Data Science, and Computational Social Science. I completed my undergraduate degree at the <a href="https://www.cs.umd.edu/">University of Maryland, College Park</a>, where I worked with<a href="https://glciampaglia.com/ ">Prof. Giovanni Luca Ciampaglia</a> to study news reliability on Bluesky Social Media.  
             </p>
             
             <p class="mb-0">
