feat: updated main page with projects

--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@ title: Vikas Reddy
             </div>
         </div>
         <div class="col-12 col-md-8">
-            <div class="container pt-2 px-0 px-md-3">
+            <!-- <div class="container pt-2 px-0 px-md-3">
                 <p style="font-weight: 500 !important; text-transform: uppercase;">Featured Projects</p>
                 <div class="row mt-4">
-                    <!-- Iterate over selected projects -->
+                    Iterate over selected projects
                     {% assign selected_projects = projects | slice: 0, 2 %}
                     {% for project in selected_projects %}
                     <div class="col-12 col-md-6 mb-2"> 
@@ -69,7 +69,7 @@ title: Vikas Reddy
                                 
                             </div>      
                             
-                            <!-- Content Section -->
+                            Content Section
                             <div class="col-7 px-0">
                                 <div style="line-height: 1.3 !important;" class="mb-3">
                                     <a href="{{ project.link }}"
@@ -94,7 +94,7 @@ title: Vikas Reddy
                 <div class="d-flex flex-row-reverse mt-4">
                     <a href="{{ 'project' | relative_url }}" style="font-size: .95rem; font-weight: 500 !important;">> View All</a>
                 </div>
-            </div>
+            </div> -->
             <div class="container pb-3 px-0 px-md-3">
                 <p style="font-weight: 500 !important; text-transform: uppercase;">Publication</p>
                 <div class="row mt-4">
